[gd_scene load_steps=3 format=3 uid="uid://k3k22bogbqny"]

[ext_resource type="Script" path="res://src/UI/Body/GlobalStyles/Scripts/motion_blur_container.gd" id="1_rcvu0"]
[ext_resource type="PackedScene" uid="uid://2cftnam31qlk" path="res://src/UI/Components/input.tscn" id="2_2cf2t"]

[node name="MotionBlurContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rcvu0")

[node name="ActiveCheckButton" type="CheckButton" parent="."]
layout_mode = 2
text = "KEY_ACTIVE"

[node name="DirectionXInput" parent="." instance=ExtResource("2_2cf2t")]
layout_mode = 2
type = 1
name_label = "X"
reset = false
step = 0.1

[node name="DirectionYInput" parent="." instance=ExtResource("2_2cf2t")]
layout_mode = 2
type = 1
name_label = "Y"
reset = false
step = 0.1

[node name="BlurAmountInput" parent="." instance=ExtResource("2_2cf2t")]
layout_mode = 2
type = 2
name_label = "KEY_BLUR_AMOUNT"
reset = false

[connection signal="toggled" from="ActiveCheckButton" to="." method="_on_active_check_button_toggled"]
[connection signal="changed" from="DirectionXInput" to="." method="_on_direction_x_input_changed"]
[connection signal="changed" from="DirectionYInput" to="." method="_on_direction_y_input_changed"]
[connection signal="changed" from="BlurAmountInput" to="." method="_on_blur_amount_input_changed"]
